fixing horizontal scroll on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -41,15 +41,14 @@ img {
 }
 
 @media only screen and (max-width: 500) {
-  body {
-    overflow-x: hidden !important;
-  }
+  body,
   html {
     overflow-x: hidden !important;
   }
 
   body {
     position: relative;
+    width: 100%;
   }
 }
 
